--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0"
   },
